--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container text-center">
       <h2>rem</h2>
       <div class="row">
-        <div class="col-4">
+        <div class="col-4 col-md-3">
           <img src="rem.jpg" class="img-fluid" alt="" />
           <h5>rem</h5>
         </div>
