--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           <img src="rem.jpg" class="img-fluid" alt="" />
           <h5>rem</h5>
         </div>
-        <div class="col-4">
+        <div class="col-4 col-md-3">
           <img src="rem 2.jpg" class="img-fluid" alt="" />
           <h5>maid</h5>
         </div>
-        <div class="col-4">
+        <div class="col-4 col-md-3">
           <img src="rem e.jpg" class="img-fluid" alt="" />
           <h5>uwu</h5>
         </div>
